Added Muted Variant to Documentation Text

--- a/apps/docs/content/components/CTAForm.mdx
+++ b/apps/docs/content/components/CTAForm.mdx
@@ -35,7 +35,7 @@ import {CTAForm} from '@primer/react-brand'
   <CTAForm.Confirm>
     <FormControl required>
       <FormControl.Label>
-        <Text size="300">
+        <Text size="300" variant="muted">
           I agree to the{' '}
           <InlineLink href="www.github.com">Privacy Policy</InlineLink> and{' '}
           <InlineLink href="www.github.com">Terms of Service</InlineLink>
