--- a/apps/docs/content/components/Button.mdx
+++ b/apps/docs/content/components/Button.mdx
@@ -87,10 +87,10 @@ The `Button` component can render as a `button` or `a` HTML element. By default,
 
 ### Button
 
-| Name             | Type                                                      |    Default    | Description                                        |
-| :--------------- | :-------------------------------------------------------- | :-----------: | :------------------------------------------------- |
-| `leadingVisual`  | `ReactElement`                                            |  `undefined`  | The leading icon appears before the button content |
-| `trailingVisual` | `ReactElement`                                            |  `undefined`  | The trailing icon appears after the button content |
-| `variants`       | <PropTableValues values={ButtonVariants} addLineBreaks /> | `'secondary'` | The styling variations available in Button         |
-| `size`           | <PropTableValues values={ButtonSizes} addLineBreaks />    |  `'medium'`   | The size variations available in Button            |
-| `hasArrow`       | `boolean`                                                 |    `true`     | A flag to show/hide the arrow icon                 |
+| Name             | Type                                                      |    Default    | Description                                          |
+| :--------------- | :-------------------------------------------------------- | :-----------: | :--------------------------------------------------- |
+| `leadingVisual`  | `ReactElement`                                            |  `undefined`  | The leading visual appears before the button content |
+| `trailingVisual` | `ReactElement`                                            |  `undefined`  | The trailing visual appears after the button content |
+| `variants`       | <PropTableValues values={ButtonVariants} addLineBreaks /> | `'secondary'` | The styling variations available in Button           |
+| `size`           | <PropTableValues values={ButtonSizes} addLineBreaks />    |  `'medium'`   | The size variations available in Button              |
+| `hasArrow`       | `boolean`                                                 |    `true`     | A flag to show/hide the arrow icon                   |
