--- a/apps/docs/content/components/FAQ.mdx
+++ b/apps/docs/content/components/FAQ.mdx
@@ -398,12 +398,13 @@ render(<App />)
 
 <h3 id="faq-subheading">FAQ.Subheading</h3>
 
-| Name        | Type              | Default | Description                              |
-| :---------- | :---------------- | :-----: | :--------------------------------------- |
-| `children`  | `string`          |         | Sub-heading text                         |
-| `className` | `string`          |         | Sub-heading custom class                 |
-| `id`        | `string`          |         | Sets a custom id                         |
-| `ref`       | `React.RefObject` |         | Forward a Ref to the underlying DOM node |
+| Name        | Type                                                            | Default | Description                              |
+| :---------- | :-------------------------------------------------------------- | :-----: | :--------------------------------------- |
+| `children`  | `string`                                                        |         | Sub-heading text                         |
+| `className` | `string`                                                        |         | Sub-heading custom class                 |
+| `id`        | `string`                                                        |         | Sets a custom id                         |
+| `as`        | <PropTableValues values={HeadingTags.slice(1)} addLineBreaks /> | `'h3'`  | Applies the underlying HTML element      |
+| `ref`       | `React.RefObject`                                               |         | Forward a Ref to the underlying DOM node |
 
 <h3 id="faq-item">FAQ.Item</h3>
 
@@ -417,12 +418,13 @@ render(<App />)
 
 <h3 id="faq-question">FAQ.Question</h3>
 
-| Name        | Type              | Default | Description                              |
-| :---------- | :---------------- | :-----: | :--------------------------------------- |
-| `className` | `string`          |         | Sets a custom class on the root element  |
-| `children`  | `string`          |         | Question text                            |
-| `id`        | `string`          |         | Sets a custom id                         |
-| `ref`       | `React.RefObject` |         | Forward a Ref to the underlying DOM node |
+| Name        | Type                                                            | Default | Description                              |
+| :---------- | :-------------------------------------------------------------- | :-----: | :--------------------------------------- |
+| `className` | `string`                                                        |         | Sets a custom class on the root element  |
+| `children`  | `string`                                                        |         | Question text                            |
+| `id`        | `string`                                                        |         | Sets a custom id                         |
+| `as`        | <PropTableValues values={HeadingTags.slice(1)} addLineBreaks /> | `'h4'`  | Applies the underlying HTML element      |
+| `ref`       | `React.RefObject`                                               |         | Forward a Ref to the underlying DOM node |
 
 <h3 id="faq-answer">FAQ.Answer</h3>
 
