Fix test build issue

--- a/apps/docs/content/components/FAQ.mdx
+++ b/apps/docs/content/components/FAQ.mdx
@@ -8,6 +8,7 @@ description: Display content in a Q&A format
 ---
 
 import InlineCode from '@primer/gatsby-theme-doctocat/src/components/inline-code'
+import {HeadingTags} from '@primer/react-brand'
 import {Box as Container} from '@primer/react'
 import {PropTableValues} from '../../src/components'
 import {Label} from '@primer/react'
