Made `FAQHeading` heading level adjustable, added tests

--- a/apps/docs/content/components/FAQ.mdx
+++ b/apps/docs/content/components/FAQ.mdx
@@ -396,6 +396,7 @@ render(<App />)
 | `id`        | `string`                                                        |            | Sets a custom id                         |
 | `ref`       | `React.RefObject`                                               |            | Forward a Ref to the underlying DOM node |
 | `size`      | <PropTableValues values={['medium', 'large' ]} addLineBreaks /> | `'medium'` | Heading text size                        |
+| `as`        | <PropTableValues values={HeadingTags} addLineBreaks />          |            | Applies the underlying HTML element      |
 
 <h3 id="faq-subheading">FAQ.Subheading</h3>
 
