--- a/apps/docs/content/components/FAQ.mdx
+++ b/apps/docs/content/components/FAQ.mdx
@@ -8,6 +8,7 @@ description: Display content in a Q&A format
 ---
 
 import InlineCode from '@primer/gatsby-theme-doctocat/src/components/inline-code'
+import {HeadingTags} from '@primer/react-brand'
 import {Box as Container} from '@primer/react'
 import {PropTableValues} from '../../src/components'
 import {Label} from '@primer/react'
@@ -395,15 +396,17 @@ render(<App />)
 | `id`        | `string`                                                        |            | Sets a custom id                         |
 | `ref`       | `React.RefObject`                                               |            | Forward a Ref to the underlying DOM node |
 | `size`      | <PropTableValues values={['medium', 'large' ]} addLineBreaks /> | `'medium'` | Heading text size                        |
+| `as`        | <PropTableValues values={HeadingTags} addLineBreaks />          |            | Applies the underlying HTML element      |
 
 <h3 id="faq-subheading">FAQ.Subheading</h3>
 
-| Name        | Type              | Default | Description                              |
-| :---------- | :---------------- | :-----: | :--------------------------------------- |
-| `children`  | `string`          |         | Sub-heading text                         |
-| `className` | `string`          |         | Sub-heading custom class                 |
-| `id`        | `string`          |         | Sets a custom id                         |
-| `ref`       | `React.RefObject` |         | Forward a Ref to the underlying DOM node |
+| Name        | Type                                                            | Default | Description                              |
+| :---------- | :-------------------------------------------------------------- | :-----: | :--------------------------------------- |
+| `children`  | `string`                                                        |         | Sub-heading text                         |
+| `className` | `string`                                                        |         | Sub-heading custom class                 |
+| `id`        | `string`                                                        |         | Sets a custom id                         |
+| `as`        | <PropTableValues values={HeadingTags.slice(1)} addLineBreaks /> | `'h3'`  | Applies the underlying HTML element      |
+| `ref`       | `React.RefObject`                                               |         | Forward a Ref to the underlying DOM node |
 
 <h3 id="faq-item">FAQ.Item</h3>
 
@@ -417,12 +420,13 @@ render(<App />)
 
 <h3 id="faq-question">FAQ.Question</h3>
 
-| Name        | Type              | Default | Description                              |
-| :---------- | :---------------- | :-----: | :--------------------------------------- |
-| `className` | `string`          |         | Sets a custom class on the root element  |
-| `children`  | `string`          |         | Question text                            |
-| `id`        | `string`          |         | Sets a custom id                         |
-| `ref`       | `React.RefObject` |         | Forward a Ref to the underlying DOM node |
+| Name        | Type                                                            | Default | Description                              |
+| :---------- | :-------------------------------------------------------------- | :-----: | :--------------------------------------- |
+| `className` | `string`                                                        |         | Sets a custom class on the root element  |
+| `children`  | `string`                                                        |         | Question text                            |
+| `id`        | `string`                                                        |         | Sets a custom id                         |
+| `as`        | <PropTableValues values={HeadingTags.slice(1)} addLineBreaks /> | `'h4'`  | Applies the underlying HTML element      |
+| `ref`       | `React.RefObject`                                               |         | Forward a Ref to the underlying DOM node |
 
 <h3 id="faq-answer">FAQ.Answer</h3>
 
