Adjust tokens and docs

--- a/apps/docs/content/components/Card.mdx
+++ b/apps/docs/content/components/Card.mdx
@@ -3,7 +3,7 @@ title: Card
 status: Experimental
 source: https://github.com/primer/brand/tree/main/packages/react/src/Card/Card.tsx
 storybook: '/brand/storybook/?path=/story/components-card--playground'
-description: Use the Card component to display information in a compact way and link to other pages.
+description: Use the Card component to display information in a compact way and link to other internal pages.
 ---
 
 import {Label} from '@primer/react'
@@ -17,7 +17,7 @@ import {Card} from '@primer/react-brand'
 
 ### Default
 
-The default card can be built with a custom heading and a description. The link label defaults to `Read more` and can be customized using the `link` prop.
+The default card displays a heading and description. The link text defaults to `Read more`, but can be customized using the `label` prop.
 
 ```jsx live
 <Card href="https://github.com">
